# matrix-lightning-tip-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENCE.MD  README.MD  build.gradle.kts  diesel.toml  docker-compose.yml
example-configs/: config.conf
migrations/2021-12-28-091103_matrix_id_2_lnbits_id/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/application_service/: application_service.rs  http_methods.rs  mod.rs  protocol.rs  registration.rs  txnid.rs
src/data_layer/: mod.rs  models.rs  schema.rs
src/lnbits_client/: mod.rs
src/matrix_bot/: business_logic.rs  commands.rs  mod.rs  utils.rs
