[package]
name = "matrix-lightning-tip-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# features = ["full"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2.33.1"
argfile = "0.1.3"
wild = "2.0.4"
url = "2.2.2"
matrix-sdk = { version = "0.4.1", features = ["encryption", "qrcode", "sled_cryptostore", "sled_state_store", "require_auth_for_profile_requests", "native-tls"] }
tokio = { version = "1.14.0", features = ["full"] }
simple_logger = "1.15.1"
log = "0.4.14"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["sqlite"] }
simple-error = "0.1.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
qrcode-generator = "4.1.2"
mime = "0.3.16"
lightning-invoice = "0.12.0"
tl = "0.4.4"


