[package]
name = "matrix-lightning-tip-bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# features = ["full"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json", "cookies"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = "4.5.18"
argfile = "0.2.1"
wild = "2.2.1"
url = "2.5.2"
matrix-sdk = { version = "0.7.1", features = ["e2e-encryption", "qrcode"] }
tokio = { version = "1.40.0", features = ["full"] }
simple_logger = "5.0.0"
log = "0.4.22"
dotenv = "0.15.0"
diesel = { version = "2.2.4", features = ["sqlite", "numeric", "chrono", "r2d2", "uuid"] }
simple-error = "0.3.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
qrcode-generator = "4.1.9"
mime = "0.3.17"
lightning-invoice = "0.32.0"
tl = "0.4.4"
lnurl-rs = "0.8.0"
warp = "0.3.7"
rand = "0.8.5"
bytes = "1.7.2"
serde_yaml = "0.9.34+deprecated"
regex = "1.11.0"
ruma-signatures = "0.16.0"
ruma = { version = "0.11.0", features = ["full","appservice-api"] }
http = "1.1.0"

